# easecurve

./: .gitignore  .gitmodules  CMakeLists.txt  easecurve.html  main.cpp
src/: appstate.cppm  appstate.h  calculate.cpp  easecurve.cpp  easecurve.cppm  easecurve.h  filesystem.cpp  filesystem.h  rassert.h  render.cpp  trace.cpp  trace.h  trig.h  valgebra.h
